--- a/config/simulation/m600/gain_manager/gain_manager.yaml
+++ b/config/simulation/m600/gain_manager/gain_manager.yaml
@@ -2,51 +2,25 @@ gains: [
   "default",
 ]
 
-
-
 gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    ICP: ["default"]
-    VSLAM: ["default"]
-    BRICKFLOW: ["default"]
-    HECTOR: ["default"]
-    ALOAM: ["default"]
-    ALOAMGARM: ["default"]
-    ALOAMREP: ["soft"]
-    BRICK: ["default"]
-    T265: ["default"]
-    OBJECT: ["supersoft"]
-    VIO: ["default"]
-    LIDAR: ["default"]
-    RTK: ["default"]
-    OPTFLOWGPS: ["default"]
-    GPS: ["default"]
-    OPTFLOW: ["default"]
-    TOWER: ["default"]
-    LIOSAM: ["default"]
-    OTHER: ["default"]
+    hector: ["default"]
+    aloam: ["default"]
+    vio: ["default"]
+    rtk: ["default"]
+    gps: ["default"]
+    optflow: ["default"]
+    other: ["default"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    ICP: "default"
-    VSLAM: "default"
-    BRICKFLOW: "default"
-    HECTOR: "default"
-    ALOAM: "default"
-    ALOAMGARM: "default"
-    ALOAMREP: "soft"
-    BRICK: "default"
-    T265: "default"
-    OBJECT: "supersoft"
-    VIO: "default"
-    LIDAR: "default"
-    RTK: "default"
-    OPTFLOWGPS: "default"
-    GPS: "default"
-    OPTFLOW: "default"
-    TOWER: "default"
-    LIOSAM: "default"
-    OTHER: "default"
+    hector: "default"
+    aloam: "default"
+    vio: "default"
+    rtk: "default"
+    gps: "default"
+    optflow: "default"
+    other: "default"
