--- a/config/uav/t18/gain_manager/gain_manager.yaml
+++ b/config/uav/t18/gain_manager/gain_manager.yaml
@@ -8,45 +8,20 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    ICP: ["supersoft", "soft"]
-    VSLAM: ["supersoft", "soft"]
-    BRICKFLOW: ["supersoft", "soft"]
-    HECTOR: ["supersoft"]
-    ALOAM: ["supersoft"]
-    ALOAMGARM: ["supersoft"]
-    ALOAMREP: ["soft"]
-    BRICK: ["supersoft", "soft"]
-    T265: ["supersoft", "soft"]
-    OBJECT: ["supersoft"]
-    VIO: ["supersoft"]
-    LIDAR: ["supersoft"]
-    RTK: ["supersoft", "soft"]
-    OPTFLOWGPS: ["supersoft"]
-    GPS: ["supersoft", "soft"]
-    OPTFLOW: ["supersoft", "soft"]
-    TOWER: ["supersoft", "soft"]
-    LIOSAM: ["supersoft", "soft"]
-    OTHER: ["supersoft"]
+    hector: ["supersoft"]
+    aloam: ["supersoft"]
+    vio: ["supersoft"]
+    rtk: ["supersoft", "soft"]
+    gps: ["supersoft", "soft"]
+    optflow: ["supersoft", "soft"]
+    other: ["supersoft"]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    ICP: "supersoft"
-    VSLAM: "supersoft"
-    BRICKFLOW: "supersoft"
-    HECTOR: "supersoft"
-    ALOAM: "supersoft"
-    ALOAMGARM: "supersoft"
-    ALOAMREP: "soft"
-    BRICK: "supersoft"
-    T265: "supersoft"
-    OBJECT: "supersoft"
-    VIO: "supersoft"
-    LIDAR: "supersoft"
-    RTK: "supersoft"
-    OPTFLOWGPS: "supersoft"
-    GPS: "supersoft"
-    OPTFLOW: "supersoft"
-    TOWER: "supersoft"
-    LIOSAM: "supersoft"
-    OTHER: "supersoft"
+    aloam: "supersoft"
+    vio: "supersoft"
+    rtk: "supersoft"
+    gps: "supersoft"
+    optflow: "supersoft"
+    other: "supersoft"
