--- a/config/default/estimation_manager/estimation_manager.yaml
+++ b/config/default/estimation_manager/estimation_manager.yaml
@@ -6,10 +6,5 @@ frame_id:
   fcu_untilted: "fcu_untilted" # the body frame with zero tilt angles default: ("fcu_untilted")
   rtk_antenna: "rtk_antenna" # the body frame with zero tilt angles default: ("fcu_untilted")
 
-# rates of timers [Hz]
-rate:
-  uav_state: 100 # used by the control_manager for feedback control (default: 100)
-  health: 100 # checks if everything is ok (default: 100)
-
 scope_timer:
-  enabled: true
+  enabled: false
