--- a/config/default/transform_manager/transform_manager.yaml
+++ b/config/default/transform_manager/transform_manager.yaml
@@ -44,7 +44,7 @@ hw_api_raw:
   namespace: "hw_api" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: true # if true, will publish tf to utm_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
-  republish_in_frames: ["local_origin", "world_origin"] # the odometry message will be transformed and republished in the specified frames
+  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
 
 gps_garmin:
   odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
@@ -84,7 +84,16 @@ aloam:
   namespace: "estimation_manager/aloam" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
-  republish_in_frames: ["local_origin", "world_origin"] # the odometry message will be transformed and republished in the specified frames
+  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
+
+passthrough:
+  odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
+  tf_from_attitude: # used for transforming velocities before full transform is available
+    enabled: false
+  namespace: "estimation_manager/passthrough" # the namespace of the topic (usually the node that publishes the topic)
+  utm_based: false # if true, will publish tf to utm_origin
+  inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
+  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
 
 ground_truth:
   odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
@@ -93,4 +102,4 @@ ground_truth:
   namespace: "estimation_manager/ground_truth" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
-  republish_in_frames: ["local_origin", "world_origin"] # the odometry message will be transformed and republished in the specified frames
+  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
