--- a/config/simulation/m600/gain_manager/gain_manager.yaml
+++ b/config/simulation/m600/gain_manager/gain_manager.yaml
@@ -6,7 +6,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    hector: ["default"]
+    hector_garmin: ["default"]
     aloam: ["default"]
     vio: ["default"]
     rtk: ["default"]
@@ -17,7 +17,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    hector: "default"
+    hector_garmin: "default"
     aloam: "default"
     vio: "default"
     rtk: "default"
