--- a/config/uav/eagle/gain_manager/gain_manager.yaml
+++ b/config/uav/eagle/gain_manager/gain_manager.yaml
@@ -8,7 +8,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    hector: ["soft"]
+    hector_garmin: ["soft"]
     aloam: ["soft"]
     vio: ["supersoft"]
     rtk: ["supersoft"]
@@ -20,7 +20,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    hector: "soft"
+    hector_garmin: "soft"
     aloam: "soft"
     vio: "supersoft"
     rtk: "supersoft"
