--- a/config/uav/eaglemk2/gain_manager/gain_manager.yaml
+++ b/config/uav/eaglemk2/gain_manager/gain_manager.yaml
@@ -8,7 +8,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    hector: ["supersoft"]
+    hector_garmin: ["supersoft"]
     aloam: ["supersoft"]
     vio: ["supersoft"]
     rtk: ["supersoft", "soft"]
@@ -20,7 +20,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    hector: "supersoft"
+    hector_garmin: "supersoft"
     aloam: "supersoft"
     vio: "supersoft"
     rtk: "supersoft"
