--- a/config/uav/f450/gain_manager/gain_manager.yaml
+++ b/config/uav/f450/gain_manager/gain_manager.yaml
@@ -9,7 +9,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    hector: ["supersoft"]
+    hector_garmin: ["supersoft"]
     aloam: ["supersoft"]
     vio: ["supersoft"]
     rtk: ["supersoft", "soft", "tight"]
@@ -21,7 +21,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    hector: "supersoft"
+    hector_garmin: "supersoft"
     aloam: "supersoft"
     vio: "supersoft"
     rtk: "soft"
