--- a/config/uav/t18/gain_manager/gain_manager.yaml
+++ b/config/uav/t18/gain_manager/gain_manager.yaml
@@ -8,7 +8,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    hector: ["supersoft"]
+    hector_garmin: ["supersoft"]
     aloam: ["supersoft"]
     vio: ["supersoft"]
     rtk: ["supersoft", "soft"]
