--- a/config/uav/x500/gain_manager/gain_manager.yaml
+++ b/config/uav/x500/gain_manager/gain_manager.yaml
@@ -10,7 +10,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    hector: ["supersoft"]
+    hector_garmin: ["supersoft"]
     aloam: ["supersoft", "soft"]
     vio: ["supersoft"]
     rtk: ["supersoft"]
@@ -22,7 +22,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    hector: "supersoft"
+    hector_garmin: "supersoft"
     aloam: "soft"
     vio: "supersoft"
     rtk: "supersoft"
