--- a/config/default/transform_manager/transform_manager.yaml
+++ b/config/default/transform_manager/transform_manager.yaml
@@ -67,7 +67,7 @@ gps_garmin:
     attitude_topic: "attitude" # name of the attitude topic(expects geometry_msgs/QuaternionStamped topic type)
   namespace: "estimation_manager/gps_garmin" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: true # if true, will publish tf to utm_origin
-  publish_local_tf: false # if true, will publish tf to local_origin
+  publish_local_tf: true # if true, will publish tf to local_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
   republish_in_frames: ["local_origin", "world_origin"] # the odometry message will be transformed and republished in the specified frames
 
@@ -78,7 +78,7 @@ gps_baro:
     attitude_topic: "attitude" # name of the attitude topic(expects geometry_msgs/QuaternionStamped topic type)
   namespace: "estimation_manager/gps_baro" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: true # if true, will publish tf to utm_origin
-  publish_local_tf: false # if true, will publish tf to local_origin
+  publish_local_tf: true # if true, will publish tf to local_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
   republish_in_frames: ["local_origin", "world_origin"] # the odometry message will be transformed and republished in the specified frames
 
@@ -89,7 +89,7 @@ rtk:
     attitude_topic: "attitude" # name of the attitude topic(expects geometry_msgs/QuaternionStamped topic type)
   namespace: "estimation_manager/rtk" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: true # if true, will publish tf to utm_origin
-  publish_local_tf: false # if true, will publish tf to local_origin
+  publish_local_tf: true # if true, will publish tf to local_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
   republish_in_frames: ["local_origin", "world_origin"] # the odometry message will be transformed and republished in the specified frames
 
@@ -100,7 +100,7 @@ aloam:
     attitude_topic: "attitude" # name of the attitude topic(expects geometry_msgs/QuaternionStamped topic type)
   namespace: "estimation_manager/aloam" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
-  publish_local_tf: false # if true, will publish tf to local_origin
+  publish_local_tf: true # if true, will publish tf to local_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
   republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
 
@@ -111,7 +111,7 @@ hector_garmin:
     attitude_topic: "attitude" # name of the attitude topic(expects geometry_msgs/QuaternionStamped topic type)
   namespace: "estimation_manager/hector_garmin" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
-  publish_local_tf: false # if true, will publish tf to local_origin
+  publish_local_tf: true # if true, will publish tf to local_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
   republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
 
@@ -121,7 +121,7 @@ passthrough:
     enabled: false
   namespace: "estimation_manager/passthrough" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
-  publish_local_tf: false # if true, will publish tf to local_origin
+  publish_local_tf: true # if true, will publish tf to local_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
   republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
 
@@ -131,6 +131,6 @@ ground_truth:
     enabled: false
   namespace: "estimation_manager/ground_truth" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
-  publish_local_tf: false # if true, will publish tf to local_origin
+  publish_local_tf: true # if true, will publish tf to local_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
   republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
