--- a/config/simulation/coppelia_quad/gain_manager/gain_manager.yaml
+++ b/config/simulation/coppelia_quad/gain_manager/gain_manager.yaml
@@ -8,45 +8,25 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
-    ICP: ["supersoft", "soft"]
-    VSLAM: ["supersoft", "soft"]
-    BRICKFLOW: ["soft"]
-    HECTOR: ["soft"]
-    ALOAM: ["soft"]
-    ALOAMGARM: ["soft"]
-    ALOAMREP: ["soft"]
-    BRICK: ["supersoft"]
-    T265: ["soft"]
-    OBJECT: ["supersoft"]
-    VIO: ["supersoft"]
-    LIDAR: ["supersoft"]
-    RTK: ["supersoft", "soft", "tight"]
-    OPTFLOWGPS: ["supersoft", "soft", "tight"]
-    GPS: ["supersoft", 'soft', 'tight']
-    OPTFLOW: ["supersoft", "soft"]
-    TOWER: ["supersoft", "soft"]
-    LIOSAM: ["supersoft", "soft", "tight"]
-    OTHER: ["supersoft"]
+    gps_garmin: ["supersoft", 'soft', 'tight']
+    gps_baro: ["supersoft", 'soft', 'tight']
+    rtk: ["supersoft", 'soft', 'tight']
+    aloam: ["soft"]
+    vio: ["supersoft","soft"]
+    hector_garmin: ["soft"]
+    optflow: ["supersoft", "soft"]
+    other: ["supersoft"]
+    ground_truth: ["supersoft", 'soft', 'tight']
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
-    ICP: "supersoft"
-    VSLAM: "supersoft"
-    BRICKFLOW: "soft"
-    HECTOR: "soft"
-    ALOAM: "soft"
-    ALOAMGARM: "soft"
-    ALOAMREP: "soft"
-    BRICK: "supersoft"
-    T265: "soft"
-    OBJECT: "supersoft"
-    VIO: "supersoft"
-    LIDAR: "supersoft"
-    RTK: "soft"
-    OPTFLOWGPS: "soft"
-    GPS: "soft"
-    OPTFLOW: "supersoft"
-    TOWER: "supersoft"
-    LIOSAM: "soft"
-    OTHER: "supersoft"
+    gps_garmin: "soft"
+    gps_baro: "soft"
+    rtk: "soft"
+    aloam: "soft"
+    vio: "supersoft"
+    hector_garmin: "soft"
+    optflow: "supersoft"
+    other: "supersoft"
+    ground_truth: "soft"
