--- a/config/default/estimation_manager/estimation_manager.yaml
+++ b/config/default/estimation_manager/estimation_manager.yaml
@@ -6,5 +6,15 @@ frame_id:
   fcu_untilted: "fcu_untilted" # the body frame with zero tilt angles default: ("fcu_untilted")
   rtk_antenna: "rtk_antenna" # the body frame with zero tilt angles default: ("fcu_untilted")
 
+debug_topics:
+  input: true
+  output: false
+  state: true
+  covariance: false
+  innovation: false
+  correction: false
+  correction_delay: false
+  diagnostics: false
+
 scope_timer:
   enabled: false
