--- a/config/simulation/f450/model_params.yaml
+++ b/config/simulation/f450/model_params.yaml
@@ -9,8 +9,8 @@
 
 model_params:
 
-  arm_length: 0.27 # [m]
-  body_height: 0.1 # [m]
+  arm_length: 0.225 # [m]
+  body_height: 0.1  # [m]
 
   propulsion:
 
@@ -31,12 +31,12 @@ model_params:
     #  yaw torque,         Matrix       ...
     #  thrust force]              ]    RPM_n_motors^2]
     allocation_matrix: [
-      1, -1, -0.5,  0.5,  0.5,   -0.5, # *= force_constant*arm_length
-      0, 0,  -0.87, 0.87, -0.87, 0.87, # *= force_constant*arm_length
-      1, -1, 1,     -1,   -1,    1,    # *= torque_constant*force_constant
-      1, 1,  1,     1,    1,     1     # *= force_constant
+      -0.707, 0.707, 0.707,  -0.707, # *= force_constant*arm_length
+      -0.707, 0.707, -0.707, 0.707,  # *= force_constant*arm_length
+      -1,     -1,    1,      1,      # *= moment_constant*force_constant
+      1,      1,     1,      1,      # *= force_constant
     ]
 
     rpm:
-      min: 1360 # [revolutions/minute]
-      max: 9068 # [revolutions/minute]
+      min: 1360  # [revolutions/minute]
+      max: 9068  # [revolutions/minute]
