--- a/config/simulation/naki/gain_manager/gain_manager.yaml
+++ b/config/simulation/naki/gain_manager/gain_manager.yaml
@@ -7,6 +7,7 @@ gain_management:
 
   # list of allowed gains per odometry mode
   allowed_gains:
+    ground_truth: ["supersoft", 'soft']
     gps_garmin: ["supersoft", 'soft']
     gps_baro: ["supersoft", 'soft']
     rtk: ["supersoft", 'soft']
@@ -19,6 +20,7 @@ gain_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_gains:
+    ground_truth: "soft"
     gps_garmin: "supersoft"
     gps_baro: "supersoft"
     rtk: "supersoft"
