--- a/config/default/transform_manager/transform_manager.yaml
+++ b/config/default/transform_manager/transform_manager.yaml
@@ -120,6 +120,17 @@ hector_garmin:
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
   republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
 
+vio:
+  odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
+  tf_from_attitude: # used for transforming velocities before full transform is available
+    enabled: true
+    attitude_topic: "attitude" # name of the attitude topic(expects geometry_msgs/QuaternionStamped topic type)
+  namespace: "estimation_manager/vio" # the namespace of the topic (usually the node that publishes the topic)
+  utm_based: false # if true, will publish tf to utm_origin
+  publish_local_tf: true # if true, will publish tf to local_origin
+  inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
+  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
+
 passthrough:
   odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
   tf_from_attitude: # used for transforming velocities before full transform is available
