--- a/config/default/transform_manager/transform_manager.yaml
+++ b/config/default/transform_manager/transform_manager.yaml
@@ -81,7 +81,7 @@ gps_baro:
   namespace: "estimation_manager/gps_baro" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: true # if true, will publish tf to utm_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
-  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
+  republish_in_frames: [] # the odometry message will be transformed and republished in the specified frames
 
 rtk:
   odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
@@ -91,7 +91,7 @@ rtk:
   namespace: "estimation_manager/rtk" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: true # if true, will publish tf to utm_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
-  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
+  republish_in_frames: [] # the odometry message will be transformed and republished in the specified frames
 
 aloam:
   odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
@@ -101,7 +101,7 @@ aloam:
   namespace: "estimation_manager/aloam" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
-  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
+  republish_in_frames: [] # the odometry message will be transformed and republished in the specified frames
 
 hector_garmin:
   odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
@@ -111,7 +111,7 @@ hector_garmin:
   namespace: "estimation_manager/hector_garmin" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
-  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
+  republish_in_frames: [] # the odometry message will be transformed and republished in the specified frames
 
 vio:
   odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
@@ -121,7 +121,7 @@ vio:
   namespace: "estimation_manager/vio" # the namespace of the topic (usually the node that publishes the topic)
   utm_based: false # if true, will publish tf to utm_origin
   inverted: true # publish as inverted tf (the default for inverted mrs tf tree convention)
-  republish_in_frames: ["local_origin"] # the odometry message will be transformed and republished in the specified frames
+  republish_in_frames: [] # the odometry message will be transformed and republished in the specified frames
 
 passthrough:
   odom_topic: "odom" # name of the topic (expects nav_msgs/Odometry topic type)
