added scripts to installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,16 @@ install(DIRECTORY launch config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   )
 
+install(DIRECTORY scripts/
+  USE_SOURCE_PERMISSIONS
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  )
+
+install(DIRECTORY scripts
+  USE_SOURCE_PERMISSIONS
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  )
+
 install(DIRECTORY include/mrs_uav_managers/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
   )
