--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <depend>std_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>mrs_msgs</depend>
+  <depend>visualization_msgs</depend>
   <depend>mrs_lib</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
