--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.1.2)
+cmake_minimum_required(VERSION 3.5)
 project(mrs_uav_managers)
 
 set(CATKIN_DEPENDENCIES
@@ -27,7 +27,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
 set(LIBRARIES
-  GainManager ConstraintManager ControlManager UavManager TfManager EstimationManager TransformManager NullTracker
+  MrsUavManagers_GainManager
+  MrsUavManagers_ConstraintManager
+  MrsUavManagers_ControlManager
+  MrsUavManagers_UavManager
+  MrsUavManagers_TfManager
+  MrsUavManagers_EstimationManager
+  MrsUavManagers_TransformManager
+  MrsUavManagers_NullTracker
   )
 
 catkin_package(
@@ -41,127 +48,127 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
   )
 
-# ControlManager
+# MrsUavManagers_ControlManager
 
-add_library(ControlManager
+add_library(MrsUavManagers_ControlManager
   src/control_manager/control_manager.cpp
   src/control_manager/output_publisher.cpp
   src/control_manager/common/common.cpp
   )
 
-add_dependencies(ControlManager
+add_dependencies(MrsUavManagers_ControlManager
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
 
-target_link_libraries(ControlManager
+target_link_libraries(MrsUavManagers_ControlManager
   ${catkin_LIBRARIES}
   )
 
-# NullTracker
+# MrsUavManagers_NullTracker
 
-add_library(NullTracker
+add_library(MrsUavManagers_NullTracker
   src/null_tracker.cpp
   )
 
-add_dependencies(NullTracker
+add_dependencies(MrsUavManagers_NullTracker
   ${catkin_EXPORTED_TARGETS}
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   )
 
-target_link_libraries(NullTracker
+target_link_libraries(MrsUavManagers_NullTracker
   ${catkin_LIBRARIES}
   )
 
-# UavManager
+# MrsUavManagers_UavManager
 
-add_library(UavManager
+add_library(MrsUavManagers_UavManager
   src/uav_manager.cpp
   )
 
-add_dependencies(UavManager
+add_dependencies(MrsUavManagers_UavManager
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
 
-target_link_libraries(UavManager
+target_link_libraries(MrsUavManagers_UavManager
   ${catkin_LIBRARIES}
   )
 
-# GainManager
+# MrsUavManagers_GainManager
 
-add_library(GainManager
+add_library(MrsUavManagers_GainManager
   src/gain_manager.cpp
   )
 
-add_dependencies(GainManager
+add_dependencies(MrsUavManagers_GainManager
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
 
-target_link_libraries(GainManager
+target_link_libraries(MrsUavManagers_GainManager
   ${catkin_LIBRARIES}
   )
 
-# ConstraintManager
+# MrsUavManagers_ConstraintManager
 
-add_library(ConstraintManager
+add_library(MrsUavManagers_ConstraintManager
   src/constraint_manager.cpp
   )
 
-add_dependencies(ConstraintManager
+add_dependencies(MrsUavManagers_ConstraintManager
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
 
-target_link_libraries(ConstraintManager
+target_link_libraries(MrsUavManagers_ConstraintManager
   ${catkin_LIBRARIES}
   )
 
-# TfManager
-add_library(TfManager
+# MrsUavManagers_TfManager
+add_library(MrsUavManagers_TfManager
   src/tf_manager.cpp
   )
 
-add_dependencies(TfManager
+add_dependencies(MrsUavManagers_TfManager
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
 
-target_link_libraries(TfManager
+target_link_libraries(MrsUavManagers_TfManager
   ${catkin_LIBRARIES}
   ${Eigen_LIBRARIES}
   )
 
-# EstimationManager
-add_library(EstimationManager
+# MrsUavManagers_EstimationManager
+add_library(MrsUavManagers_EstimationManager
   src/estimation_manager/estimation_manager.cpp
   src/estimation_manager/estimator.cpp
   src/estimation_manager/estimators/state_estimator.cpp
   src/estimation_manager/estimators/agl_estimator.cpp
   )
 
-add_dependencies(EstimationManager
+add_dependencies(MrsUavManagers_EstimationManager
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
 
-target_link_libraries(EstimationManager
+target_link_libraries(MrsUavManagers_EstimationManager
   ${catkin_LIBRARIES}
   ${Eigen_LIBRARIES}
   )
 
-# TransformManager
-add_library(TransformManager
+# MrsUavManagers_TransformManager
+add_library(MrsUavManagers_TransformManager
   src/transform_manager/transform_manager.cpp
   )
 
-add_dependencies(TransformManager
+add_dependencies(MrsUavManagers_TransformManager
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
   )
 
-target_link_libraries(TransformManager
+target_link_libraries(MrsUavManagers_TransformManager
   ${catkin_LIBRARIES}
   ${Eigen_LIBRARIES}
   )
@@ -194,6 +201,6 @@ install(DIRECTORY include/mrs_uav_managers/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
   )
 
-install(FILES plugins.xml null_tracker.xml
+install(FILES nodelets.xml plugins.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   )
