--- a/config/public/constraint_manager/constraint_manager.yaml
+++ b/config/public/constraint_manager/constraint_manager.yaml
@@ -12,6 +12,7 @@ mrs_uav_managers:
       "optflow",
       "other",
       "ground_truth",
+      "passthrough",
     ]
 
     constraints: [
@@ -33,6 +34,7 @@ mrs_uav_managers:
         optflow: ["slow"]
         other: ["slow"]
         ground_truth: ["slow", "medium", "fast"]
+        passthrough: ["slow", "medium", "fast"]
 
       # those gains will be used automatically when a localization mode switches
       # and the current gains are not in the allowed list (next paragraphs)
@@ -46,3 +48,4 @@ mrs_uav_managers:
         optflow: "slow"
         other: "slow"
         ground_truth: "slow"
+        passthrough: "slow"
