--- a/config/public/gain_manager/gain_manager.yaml
+++ b/config/public/gain_manager/gain_manager.yaml
@@ -19,31 +19,29 @@ mrs_uav_managers:
       "supersoft",
     ]
 
-    gain_management:
+    # list of allowed gains per odometry mode
+    allowed_gains:
+      gps_garmin: ["supersoft"]
+      gps_baro: ["supersoft"]
+      rtk: ["supersoft"]
+      aloam: ["supersoft"]
+      hector_garmin: ["supersoft"]
+      vio: ["supersoft"]
+      optflow: ["supersoft"]
+      other: ["supersoft"]
+      ground_truth: ["supersoft"]
+      passthrough: ["supersoft"]
 
-      # list of allowed gains per odometry mode
-      allowed_gains:
-        gps_garmin: ["supersoft"]
-        gps_baro: ["supersoft"]
-        rtk: ["supersoft"]
-        aloam: ["supersoft"]
-        hector_garmin: ["supersoft"]
-        vio: ["supersoft"]
-        optflow: ["supersoft"]
-        other: ["supersoft"]
-        ground_truth: ["supersoft"]
-        passthrough: ["supersoft"]
-
-      # those gains will be used automatically when a localization mode switches
-      # and the current gains are not in the allowed list (next paragraphs)
-      fallback_gains:
-        gps_garmin: "supersoft"
-        gps_baro: "supersoft"
-        rtk: "supersoft"
-        aloam: "supersoft"
-        hector_garmin: "supersoft"
-        vio: "supersoft"
-        optflow: "supersoft"
-        other: "supersoft"
-        ground_truth: "supersoft"
-        passthrough: "supersoft"
+    # those gains will be used automatically when a localization mode switches
+    # and the current gains are not in the allowed list (next paragraphs)
+    default_gains:
+      gps_garmin: "supersoft"
+      gps_baro: "supersoft"
+      rtk: "supersoft"
+      aloam: "supersoft"
+      hector_garmin: "supersoft"
+      vio: "supersoft"
+      optflow: "supersoft"
+      other: "supersoft"
+      ground_truth: "supersoft"
+      passthrough: "supersoft"
