MpcController as default after midair activation

--- a/config/public/uav_manager.yaml
+++ b/config/public/uav_manager.yaml
@@ -64,7 +64,7 @@ mrs_uav_managers:
     midair_activation:
 
       after_activation:
-        controller: "Se3Controller"
+        controller: "MpcController"
         tracker: "MpcTracker"
 
     flight_timer:
